# co-cite

./: .gitignore  README.md  requirements.txt
data_analysis/: .gitignore  case_understanding.ipynb  chunkwise analysis.ipynb  clustering.ipynb  dataset statistics.ipynb  generate_clusters.py  preprocessed_stats.html  rare_citactions_ds.py  raw_data_analysis.ipynb  train.py
mlpipeline/: cocitedata.py  config.py  keras_metric_callback.py  pyproject.toml  setup.py  test.py  test_recall.py  train.py  train_helpers.py
mlpipeline/src/: callbacks.py  citation_normalization.py  cocitedata.py  config.py  dpr_dataset.py  job_generator.py  keras_metric_callback.py  launch_config.py  metrics.py  parse_retrieval_data.py  plots.py  retrieval_data.py  retrieve.py  run.sh  test_recall.py  test_retrieve.py  test_segment_acc.py  train.py  train_helpers.py
mlpipeline/src/launch_configs/: debug.yaml  democonfig.yaml  eval_batchsize_config.yaml  run.sh
mlpipeline/src/retrieval/: data_utils.py  dpr_dataset.py  retrieve.py  run_retrieval.sh  train_dpr.py
mlpipeline/tests/: __init__.py  test_metrics_on_json_table.py  test_segment_acc.py
